syntax = "proto3";
package provider_api;
option go_package = "github.com/lexatic/web-backend/protos/lexatic-backend";
import "google/protobuf/timestamp.proto";


message Model {
    uint64 id = 1 [jstype = JS_STRING];
    string name = 2;
    string description = 3;
    repeated Parameter parameters = 4;
    
    Provider provider = 5;
    string website = 6;
    string priceUrl = 7;
    uint64 contextWindow = 8;
    double inputCostPerMil = 9;
    double outputCostPerMil = 10;
    uint64 providerId = 11 [jstype = JS_STRING];
}

message Parameter {
    uint64 id = 1 [jstype = JS_STRING];
    string defaultValue = 2;
    string name = 3;
    string type = 4;
    optional string minAcceptedValue = 5;
    optional string maxAcceptedValue = 6;
}

message Provider {
    uint64 id = 1 [jstype = JS_STRING];
    string name = 2;
    string description= 3;
    string image = 4;
    string website = 5;

}

message GetAllModelResponse {
    int32 code = 1;
    bool success = 2;
    repeated Model data = 3;
}

message GetAllModelRequest {}
message GetAllModelHealthRequest{}


message ModelHealth {
    google.protobuf.Timestamp windowStart = 1;
    google.protobuf.Timestamp windowEnd = 2;
    uint64 totalRequest = 3;
    uint64 totalError = 4;
}

message ModelWithHealth {
    Model model = 1;
    repeated ModelHealth stats = 2;
    string overallHealth = 3;
}

message GetAllModelHealthResponse{
    int32 code = 1;
    bool success = 2;
    repeated ModelWithHealth data = 3;
}

message GetAllProviderRequest {}

message GetModelRequest {
    uint64 modelId = 1 [jstype = JS_STRING];
}

message GetModelResponse {
    int32 code = 1;
    bool success = 2;
    Model model = 3;
}

message GetAllProviderResponse{
    int32 code = 1;
    bool success = 2;
    repeated Provider data = 3;
}

service ProviderService {
    rpc GetAllModel(GetAllModelRequest) returns (GetAllModelResponse);
    rpc GetAllModelHealth(GetAllModelHealthRequest) returns (GetAllModelHealthResponse);
    rpc GetAllProvider(GetAllProviderRequest) returns(GetAllProviderResponse);
    rpc GetModel(GetModelRequest) returns(GetModelResponse);
}